// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth reducer: should handle 'LOGIN_SUCCESS' and 'SIGNUP_SUCCESS' actions 1`] = `
Immutable.Map {
  "authenticated": true,
}
`;

exports[`auth reducer: should handle 'LOGIN_SUCCESS' and 'SIGNUP_SUCCESS' actions 2`] = `
Immutable.Map {
  "authenticated": true,
}
`;

exports[`auth reducer: should handle 'LOGOUT_SUCCESS' action 1`] = `
Immutable.Map {
  "authenticated": false,
}
`;

exports[`auth reducer: should return initial state by default 1`] = `
Immutable.Map {
  "authenticated": false,
}
`;
